// Vitest Snapshot v1

exports[`#transform > transform 1`] = `
"import { useI18n } from 'vue-i18n';
const t = useI18n();
let title = t('Key of 标题');"
`;

exports[`#transform > transform 2`] = `
"import { useI18n } from 'vue-i18n';
const t = useI18n();
let title = t('Key of 标题');"
`;

exports[`#transform > transform 3`] = `
"import { useI18n } from 'vue-i18n';
const t = useI18n();
let title = console.log(t('Key of 标题'));"
`;
